k8s/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-qatto
spec:
  selector:
    matchLabels:
      app: www-qatto
  template:
    metadata:
      labels:
        app: www-qatto
    spec:
      containers:
      - name: www-qatto
        image: oci.yorqat.com/yor/qat:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: www-qatto-service
spec:
  selector:
    app: www-qatto
  ports:
  - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-qatto-tls-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: www.qatto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www-qatto-service
                port:
                  number: 3000
  tls:
    - secretName: www-qatto-tls
      hosts:
        - www.qatto.dev
